--- a/VROOM-360Broadcaster/css/main.css
+++ b/VROOM-360Broadcaster/css/main.css
@@ -21,7 +21,7 @@
 	background-color: #000;
 }
 
-#localVideo
+#remoteVideo
 {
 	position: absolute;
 	bottom: 2%;
@@ -30,8 +30,12 @@
 	height: auto;
 }
 
-#remoteVideo
+#localVideo
 {
-	width: 100%;
-	height: 100%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 75%;
+	height: 75%;
 }
